samples/_failures_safe/1761077845_b3b075_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b7317f8.c: In function ‘main’:
./samples/SAFE/__tmp_1b7317f8.c:177:36: error: expected ‘)’ at end of input
  177 |         if (token.type == TOKEN_EOF
      |            ~                       ^
      |                                    )
./samples/SAFE/__tmp_1b7317f8.c:177:9: error: expected declaration or statement at end of input
  177 |         if (token.type == TOKEN_EOF
      |         ^~
./samples/SAFE/__tmp_1b7317f8.c:177:9: error: expected declaration or statement at end of input
